--- a/nodejs/security/package.json
+++ b/nodejs/security/package.json
@@ -1,7 +1,7 @@
 {
   "name": "security",
   "version": "1.0.0",
-  "description": "RSA, AES Encrypt lib",
+  "description": "RSA, AES Encrypt lib, usage: npm install ./security",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
