--- a/Cn-Ubingo-Security-csharp/Cn.Ubingo.Security.RSA.Test/Cn.Ubingo.Security.RSA.Test.csproj
+++ b/Cn-Ubingo-Security-csharp/Cn.Ubingo.Security.RSA.Test/Cn.Ubingo.Security.RSA.Test.csproj
@@ -84,6 +84,14 @@
   <ItemGroup>
     <Folder Include="Utility\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Keys\xml_private.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Keys\xml_public.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
