--- a/Cn-Ubingo-Security-java/.gitignore
+++ b/Cn-Ubingo-Security-java/.gitignore
@@ -13,7 +13,6 @@ Thumbs.db
 *.sln.docstates
 *.tlb
 *.tlh
-*.pyc
 *.bak
 *.cache
 *.ilk
@@ -28,5 +27,5 @@ _ReSharper*/
 [Tt]est[Rr]esult*
 *.vssscc
 $tf*/
-.idea
-node_modules
+.idea/
+*.iml
